fix: inject css before html loads, scroll to top when shifting tabs

--- a/src/styles.css
+++ b/src/styles.css
@@ -100,7 +100,7 @@ select option {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.card h2 {
+.card h3 {
   margin-top: 0;
 }
 
